[workspace]
resolver = "2"

members = [
    "rsa_challenge",
]

[workspace.package]
authors = ["Cardinal"]
edition = "2021"
homepage = "https://github.com/Cardinal-Cryptography/rsa-challenge-with-halo2"
publish = false
readme = "README.md"
repository = "https://github.com/Cardinal-Cryptography/rsa-challenge-with-halo2"
version = "0.1.0"

[workspace.dependencies]
ink = { version = "5.0.0-rc", default-features = false }
