[package]
name = "rsa_challenge"

authors = ["Cardinal"]
edition = "2021"
homepage = "https://github.com/Cardinal-Cryptography/rsa-challenge-with-halo2"
publish = false
readme = "README.md"
repository = "https://github.com/Cardinal-Cryptography/rsa-challenge-with-halo2"
version = "0.1.0"

[dependencies]
ink = { version = "5.0.0-rc", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
