[package]
name = "rsa_contract"

authors = ["Cardinal"]
edition = "2021"
homepage = "https://github.com/Cardinal-Cryptography/rsa-challenge-with-halo2"
publish = false
readme = "README.md"
repository = "https://github.com/Cardinal-Cryptography/rsa-challenge-with-halo2"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[dependencies]
ink = { version = "5.0.0-rc", default-features = false }
baby-liminal-extension = { git = "https://github.com/Cardinal-Cryptography/aleph-node", branch = "halo2-verifier", features = ["ink"] }

[dev-dependencies]
drink = { version = "0.8.5" }
# These four are needed to use `drink::create_minimal_runtime!` macro.
frame-support = { version = "23.0.0" }
frame-system = { version = "23.0.0" }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
    "ink/std",
    "baby-liminal-extension/ink-std",
]
ink-as-dependency = []
